--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   + minutes + "m " + seconds + "s ";
 		 if (distance < 0) {
     clearInterval(x);
-    document.getElementById("timer").innerHTML = "It's either Ass Day or past Ass Day!";
+    document.getElementById("timer").innerHTML = "Ass Day!!!!!!!";
   }
 }, 1000);
     </script>
